--- a/Taipei_Blockchain_Meetup_20200728.ipynb
+++ b/Taipei_Blockchain_Meetup_20200728.ipynb
@@ -480,7 +480,6 @@
         "1. String 類別是以 UTF8 編碼、可伸縮的字串\n",
         "2. str 是基礎型別，通常是使用 &str，即指向 str 的參考\n",
         "\n",
-        "另外，Rust 還有字元 (char) 型別，同樣也是以 UTF8 編碼。\n",
         "\n",
         "建立字串常數時，預設型別是 &str，即指向 str 的參考，但是，若想要使用 String 類別的方法時，可以轉為 String 物件。"
       ]
@@ -494,52 +493,18 @@
       },
       "source": [
         "let greeting = \"Hello there.\"; // greeting: &'static str\n",
+        "println!(\"{}\", greeting);\n",
         "\n",
         "let hello: String = String::from(\"hello\");\n",
+        "println!(\"{}\", hello);\n",
         "\n",
         "let mut world: String = String::new();\n",
         "world.push_str(\"world\");\n",
         "world.push('!');\n",
-        "\n"
+        "println!(\"{}\", world);\n"
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BaKVe9d1SgmV",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 87
-        },
-        "outputId": "d99b72be-5b61-4210-8f7d-153b53ddf08c"
-      },
-      "source": [
-        "x = 'hello'\n",
-        "y = 'world'\n",
-        "\n",
-        "print(x)\n",
-        "print(y)\n",
-        "\n",
-        "# 字串運算跟數值運算不同\n",
-        "print(2 + 1)\n",
-        "print('2' + '1')\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "hello\n",
-            "world\n",
-            "3\n",
-            "21\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -785,8 +750,19 @@
       "source": [
         "for item in [1, 2, 3, 4, 5].iter() {\n",
         "    println!(\"{}\", item);\n",
-        "}\n",
-        "\n",
+        "}\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I4mqMyDTJGi7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "//0..5 是 Rust 的 range 代表的是 0~4 (不含結尾)，含結尾的話要寫成 0..=5 (有等號)\n",
         "for item in 0..5 {\n",
         "    println!(\"{}\", item);\n",
@@ -843,7 +819,30 @@
         "if score >= 60 {\n",
         "  println!(\"很好，請繼續保持\");\n",
         "}\n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入這次的成績？80\n",
+            "很好，請繼續保持\n",
+            "請輸入這次的成績？59\n",
+            "加油，請繼續努力\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wCpbRPY0NVF1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "/*\n",
         "if 條件判斷 {\n",
         "  條件成立的程式區塊\n",
@@ -864,18 +863,7 @@
         "\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "請輸入這次的成績？80\n",
-            "很好，請繼續保持\n",
-            "請輸入這次的成績？59\n",
-            "加油，請繼續努力\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -918,7 +906,7 @@
         "outputId": "25d2842b-90d5-4ace-8b86-e7f8e1bf4693"
       },
       "source": [
-        "\b/*\n",
+        "/*\n",
         "fn 函式名稱(參數名稱和型別) {\n",
         "    主體的程式敘述\n",
         "}\n",
